# lead-qualifier-ai

./: .gitignore  .python-version  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/services/: airtable_service.py  crewai_service.py  openai_service.py
app/utils/: streaming_utils.py
config/: agents.yaml  tasks.yaml
data/: lead_None_20250608_233832.json
examples/: chat_session_example.py
frontend/iframe_widget/: index.html  script.js  style.css
frontend/iframe_widget/css/: style.css
frontend/iframe_widget/js/: chat.js
prompts/: mcp_lead_prompt.yaml
src/: atm_service.py  crew_runner.py  extractor.py  main.py
src/agents/: conversational_agent.py
src/crewai_plus_lead_scoring/: crew.py  main.py
tests/: test_atm_service.py
