[project]
name = "crewai_plus_lead_scoring"
version = "0.1.0"
description = "crewai-plus-lead-scoring using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
]

[project.scripts]
crewai_plus_lead_scoring = "crewai_plus_lead_scoring.main:run"
run_crew = "crewai_plus_lead_scoring.main:run"
train = "crewai_plus_lead_scoring.main:train"
replay = "crewai_plus_lead_scoring.main:replay"
test = "crewai_plus_lead_scoring.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
